--- a/catalogo/templates/package.json
+++ b/catalogo/templates/package.json
@@ -29,6 +29,9 @@
         "url": "https://github.com/BlackrockDigital/startbootstrap-modern-business.git"
     },
     "dependencies": {
+        "set-value": ">=2.0.1",
+        "lodash": ">=4.17.12",
+        "mixin-deep": ">=1.3.2",
         "bootstrap": "4.3.1",
         "jquery": "3.4.1"
     },
